--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     <div class="main_page">
         <div class="logo">
-            <img src="https://raw.githubusercontent.com/akatsuki-world/assets/refs/heads/main/akatsuki_logo_main.svg" alt="Akatsuki Inc Logo">
+            <img src="https://raw.githubusercontent.com/akatsuki-world/assets/refs/heads/main/akatsuki_logo_shadow.png" alt="Akatsuki Inc Logo">
         <div class="page_header">Akatsuki Inc</div>
         <div class="content_section">
             Wake up to reality. Nothing ever goes as planned in this world. The longer you live, the more you realize that only pain, suffering, and futility exist in this reality.
